--- a/index.html
+++ b/index.html
@@ -66,8 +66,8 @@
             width: 120px;
             height: 120px;
             border-radius: 50%;
-             background: #FF0000;
-            background-image: url('artechfuz3d-orb-logo.svg');
+            background: #FF0000;
+            /* background-image: url('artechfuz3d-orb-logo.svg'); */
             margin: 0 auto 20px;
             display: flex;
             align-items: center;
@@ -177,7 +177,7 @@
 <body>
     <div class="container">
         <div class="profile">
-            <div class="profile-image">YT</div>
+            <div class="profile-image"><img src="artechfuz3d-orb-logo.svg" alt="Logo"></div>
             <h1>ArtechFuz3D</h1>
             <p>Content Creator & YouTuber<br>Subscribe for weekly videos!</p>
         </div>
