--- a/index.html
+++ b/index.html
@@ -205,7 +205,7 @@
 
         <div class="social-links">
             <a href="https://twitter.com/ArtechFuz3D" class="social-link" title="Twitter">𝕏</a>
-            <a href="https://github.com/ArtechFuz3D" class="social-link" title="GitHub">⚡</a>
+            <a href="https://github.com/ArtechFuz3D/YoutubeLinks" class="social-link" title="GitHub">⚡</a>
             <!-- <a href="https://linkedin.com/in/yourusername" class="social-link" title="LinkedIn">in</a> -->
             <a href="https://instagram.com/ArtechFuz3D" class="social-link" title="Instagram">📷</a>
         </div>
