--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
     <link rel="icon" type="image/png" sizes="32x32" href="https://artechfuz3d.github.io/YoutubeLinks/android-chrome-512x512.png">
     <link rel="icon" type="image/png" sizes="16x16" href="https://artechfuz3d.github.io/YoutubeLinks/android-chrome-192x192.png">
     <link rel="apple-touch-icon" sizes="180x180" href="apple-touch-icon.png">
-    <link rel="manifest" href="site.webmanifest">
+    <link rel="manifest" href="manifest.json">
     <meta name="robots" content="index, follow">
 
     <meta name="theme-color" content="#FF0000">
