--- a/index.html
+++ b/index.html
@@ -26,11 +26,11 @@
     <meta property="twitter:image" content="https://artechfuz3d.github.io/YoutubeLinks/ArtechFuz3D3DLogo-square.png">
     
     <!-- Favicon -->
-    <link rel="icon" type="image/ico" href="https://artechfuz3d.github.io/YoutubeLinks/favicon.ico">
-    <link rel="icon" type="image/png" sizes="32x32" href="https://artechfuz3d.github.io/YoutubeLinks/android-chrome-512x512.png">
-    <link rel="icon" type="image/png" sizes="16x16" href="https://artechfuz3d.github.io/YoutubeLinks/android-chrome-192x192.png">
+    <link rel="icon" type="image/ico" href="favicon.ico">
+    <link rel="icon" type="image/png" sizes="32x32" href="android-chrome-512x512.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="android-chrome-192x192.png">
     <link rel="apple-touch-icon" sizes="180x180" href="apple-touch-icon.png">
-    <link rel="manifest" href="manifest.json">
+    <link rel="manifest" href="public/manifest.json">
     <meta name="robots" content="index, follow">
 
     <meta name="theme-color" content="#FF0000">
@@ -180,7 +180,7 @@
 <body>
     <div class="container">
         <div class="profile">
-            <div class="profile-image"><img src="https://artechfuz3d.github.io/YoutubeLinks/artechfuz3d-orb-logo.svg" alt="Logo"></div>
+            <div class="profile-image"><img src="artechfuz3d-orb-logo.svg" alt="Logo"></div>
             <h1>ArtechFuz3D</h1>
             <p>Content Creator & YouTuber<br>Subscribe for weekly videos!</p>
         </div>
