--- a/index.html
+++ b/index.html
@@ -16,20 +16,20 @@
     <meta property="og:url" content="https://artechfuz3d.github.io/YoutubeLinks/">
     <meta property="og:title" content="ArtechFuz3D - YouTube Links">
     <meta property="og:description" content="Content Creator & YouTuber. Subscribe and check out all my latest videos and links.">
-    <meta property="og:image" content="https://artechfuz3d.github.io/YoutubeLinks/ArtechFuz3D3DLogo-square.png">
+    <meta property="og:image" content="https://artechfuz3d.github.io/YoutubeLinks/public/ArtechFuz3D3DLogo-square.png">
     
     <!-- Twitter -->
     <meta property="twitter:card" content="summary_large_image">
     <meta property="twitter:url" content="https://artechfuz3d.github.io/YoutubeLinks/">
     <meta property="twitter:title" content="ArtechFuz3D - YouTube Links">
     <meta property="twitter:description" content="Content Creator & YouTuber. Subscribe and check out all my latest videos and links.">
-    <meta property="twitter:image" content="https://artechfuz3d.github.io/YoutubeLinks/ArtechFuz3D3DLogo-square.png">
+    <meta property="twitter:image" content="https://artechfuz3d.github.io/YoutubeLinks/public/ArtechFuz3D3DLogo-square.png">
     
     <!-- Favicon -->
-    <link rel="icon" type="image/ico" href="favicon.ico">
-    <link rel="icon" type="image/png" sizes="32x32" href="android-chrome-512x512.png">
-    <link rel="icon" type="image/png" sizes="16x16" href="android-chrome-192x192.png">
-    <link rel="apple-touch-icon" sizes="180x180" href="apple-touch-icon.png">
+    <link rel="icon" type="image/ico" href="public/favicon.ico">
+    <link rel="icon" type="image/png" sizes="32x32" href="public/android-chrome-512x512.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="public/android-chrome-192x192.png">
+    <link rel="apple-touch-icon" sizes="180x180" href="public/apple-touch-icon.png">
     <link rel="manifest" href="public/manifest.json">
     <meta name="robots" content="index, follow">
 
@@ -180,7 +180,7 @@
 <body>
     <div class="container">
         <div class="profile">
-            <div class="profile-image"><img src="artechfuz3d-orb-logo.svg" alt="Logo"></div>
+            <div class="profile-image"><img src="public/artechfuz3d-orb-logo.svg" alt="Logo"></div>
             <h1>ArtechFuz3D</h1>
             <p>Content Creator & YouTuber<br>Subscribe for weekly videos!</p>
         </div>
