--- a/index.html
+++ b/index.html
@@ -188,11 +188,12 @@
         <div class="links">
             <a href="https://youtube.com/@ArtechFuz3D" class="link-item youtube">🎬 ArtechFuz3D</a>
             <a href="https://youtube.com/@hewfunkingknewit" class="link-item youtube">🎬 Hewfunkingknewit</a>
-            <a href="https://youtube.com/@CybernetixIntergalacticSpace" class="link-item youtube">🎬 Cybernetix Intergalactic Spaces</a>
+            <a href="https://youtube.com/@CybernetixIntergalacticSpaces" class="link-item youtube">🎬 Cybernetix Intergalactic Spaces</a>
             <a href="https://youtube.com/@CybernetixIntergalacticMusic" class="link-item youtube">🎬 Cybernetix Intergalactic Music</a>
-            <a href="https://youtube.com/@CinematicSpaces" class="link-item youtube">🎬 Cinematic Spaces</a>
+            <a href="https://youtube.com/@LiminalSpacesTV" class="link-item youtube">🎬 Liminal Spaces TV</a>
             <a href="https://youtube.com/@ExpectRaint" class="link-item youtube">🎬 Expect Rain</a>
             <a href="https://youtube.com/@StealThisArt" class="link-item youtube">🎬 Steal This Art</a>
+            <a href="https://youtube.com/@ScionMatrixIntergalactic" class="link-item youtube">🎬 Scion Matrix Intergalactic</a>
 
             
             <!-- <a href="https://youtube.com/playlist?list=your-playlist-id" class="link-item">📺 Latest Video Series</a>
