--- a/index.html
+++ b/index.html
@@ -191,7 +191,7 @@
             <a href="https://youtube.com/@CybernetixIntergalacticSpaces" class="link-item youtube">🎬 Cybernetix Intergalactic Spaces</a>
             <a href="https://youtube.com/@CybernetixIntergalacticMusic" class="link-item youtube">🎬 Cybernetix Intergalactic Music</a>
             <a href="https://youtube.com/@LiminalSpacesTV" class="link-item youtube">🎬 Liminal Spaces TV</a>
-            <a href="https://youtube.com/@ExpectRaint" class="link-item youtube">🎬 Expect Rain</a>
+            <a href="https://youtube.com/@ExpectRain" class="link-item youtube">🎬 Expect Rain</a>
             <a href="https://youtube.com/@StealThisArt" class="link-item youtube">🎬 Steal This Art</a>
             <a href="https://youtube.com/@ScionMatrixIntergalactic" class="link-item youtube">🎬 Scion Matrix Intergalactic</a>
 
